--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,7 +6,7 @@
 <style>
    html, body { 
       background: linear-gradient(#dce0e2, #badbe7);
-      height: 100%;
+      min-height: 100%;
    }
 
    body {
