--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -15,7 +15,7 @@
     <main>
         <%- include('../partials/body'); %>
         <img src=<%= result.output %> alt=<%= result.output %>>
-        <div class="btn btn-secondary" >
+        <div style="margin: 20px 0;"class="btn btn-secondary" >
           <a style="color: white; text-decoration:none;" href="/">戻る</a>
         </div>
     </main>
