挙動の修正

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -14,6 +14,9 @@
 
     <main>
         <%- include('../partials/body'); %>
+        <h4>概要</h4>
+        <p>部品の加工面を分析するためのデータ可視化ツールです。<br>
+            適切なパラメータを指定することでカラーマップを出力することができます。</p>
     </main>
 
     <footer>
