--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -14,6 +14,9 @@
 
     <main>
         <%- include('../partials/body'); %>
+        <h4>秋山怜穏</h4>
+        <p>東京大学大学院工学系研究科精密工学専攻修士２年<br>梅田木下研究室</p>
+        <p>email : akiyama@susdesign.t.u-tokyo.ac.jp</p>
     </main>
 
     <footer>
