--- a/views/partials/body.ejs
+++ b/views/partials/body.ejs
@@ -1,2 +1,2 @@
-<div class="jumbotron" style="padding: 3rem 2rem;">
+<div class="jumbotron" style="padding: 2rem 2rem; margin: 0 0 5px;">
   <div class="container" style="justify-content: center; align-items: center; height: 68vh; width: 80vh">
