--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -7,7 +7,7 @@ input[type="radio"] {
 }
 
 .visualizeModeBox > label{
-  border: 2px solid #b0d1df;
+  border: 2px solid #94d3ee;
   box-shadow: 0px 2px 0px #778e99;
   border-radius: 12px;
   margin: 10px 10px;
@@ -31,7 +31,7 @@ input[type="radio"] {
 }
 
 .colorRangeBox > label{
-  border: 2px solid #b0d1df;
+  border: 2px solid #94d3ee;
   box-shadow: 0px 1px 0px #778e99;
   border-radius: 6px;
   margin: 7px 7px;
