container高さの修正

--- a/views/partials/body.ejs
+++ b/views/partials/body.ejs
@@ -1,2 +1,2 @@
 <div class="jumbotron" style="padding: 2rem 2rem; margin: 0 0 5px; display:flex;">
-  <div class="container" style="justify-content: center; align-items: center; width: 80vh; display:flex;">
+  <div class="container" style="justify-content: center; align-items: center; width: 80vh; display:flex; flex-direction: column;">
