--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -53,11 +53,11 @@
                         <label class="selectbox">
                             <select style="width: 150px;" name="param" id="param">
                                 <option selected>選択してください</option>
-                                <option value="position">位置</option>
-                                <option value="velocity">速度</option>
-                                <option value="acceleration">加速度</option>
-                                <option value="current">モータ電流</option>
-                                <option value="reverse-position">軸反転位置</option>
+                                <option value="位置">位置</option>
+                                <option value="速度">速度</option>
+                                <option value="加速度">加速度</option>
+                                <option value="モータ電流">モータ電流</option>
+                                <option value="軸反転位置">軸反転位置</option>
                             </select>
                         </label>
                     </div>
@@ -66,10 +66,10 @@
                         <label class="selectbox">
                             <select style="width: 150px;" name="axis" id="axis">
                                 <option selected>選択してください</option>
-                                <option value="x">X軸</option>
-                                <option value="y">Y軸</option>
-                                <option value="z">Z軸</option>
-                                <option value="c">C軸</option>
+                                <option value="X">X軸</option>
+                                <option value="Y">Y軸</option>
+                                <option value="Z">Z軸</option>
+                                <option value="C">C軸</option>
                             </select>
                         </label>
                     </div>
