--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -39,7 +39,16 @@ input[type="radio"] {
   background-color: #dff1f9;
 }
 
-.colorRangeBox > label:hover, .colorRangeBox > input:checked + label{
+.colorRangeBox > input:disabled + label{
+  border: 1px solid #a3a3a3;
+  border-radius: 6px;
+  margin: 8px 8px;
+  padding: 5px 12px;
+  background-color: #dddddd;
+  transform: translate3d(0, 2px, 0);
+}
+
+.colorRangeBox > input:enabled + label:hover, .colorRangeBox > input:checked + label{
   border: 2px solid #94d3ee;
   box-shadow: 0px 1px 0px #778e99;
   border-radius: 6px;
