--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,6 +7,7 @@
    html, body { 
       background: linear-gradient(#dce0e2, #badbe7);
       min-height: 100%;
+      font-family:  "游ゴシック","ヒラギノ角ゴ ProN",sans-serif;
    }
 
    body {
