ロジックとレイアウトの修正

--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -20,7 +20,7 @@
             <% if(data.visualizeMode === "mode1"){%><li>入力ファイル2：<%= data.modelFile %></li><% } %>
             <% if(data.visualizeMode === "mode2"){%><li>パラメータ：<%= data.param %></li><% } %>
             <% if(data.visualizeMode === "mode2"){%><li>軸：<%= data.axis %></li><% } %>
-            %><li>カラーレンジ：<%= data.colorRange %></li>
+            <% if(data.param !== "軸反転位置"){%><li>カラーレンジ：<%= data.colorRange %></li><% } %>
         </ul>
         <img style="max-width: 45vw"src=<%= result.output %> alt=<%= result.output %>>
         <div style="margin: 20px 0;"class="btn btn-secondary" >
