--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/">Top</a>
-  <ul class="navbar-nav mr-auto">
+  <ul class="navbar-nav mr-auto" style="display:flex; flex-direction: row;">
     <li class="nav-item">
-      <a class="nav-link" href="/about">About</a>
+      <a class="nav-link" style="padding: 0 15px;" href="/about">About</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/contact">Contact</a>
+      <a class="nav-link" style="padding: 0 20px;" href="/contact">Contact</a>
     </li>
   </ul>
 </nav>
